# standpy

./: .pyckage  README.md  setup.cfg
src/standpy/: standpy.py
