[metadata]
name = standpy
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3

[options]
python_requires = >=3.9, <4
package_dir = 
	=src
packages = 
	standpy

